RESOLVED FIXED100730
F4 inside <input type=time> should not open calendar picker
https://bugs.webkit.org/show_bug.cgi?id=100730
Summary F4 inside <input type=time> should not open calendar picker
Keishi Hattori
Reported 2012-10-30 00:31:36 PDT
F4 inside <input type=time> should not open calendar picker
Attachments
Patch (4.78 KB, patch)
2012-10-30 00:49 PDT, Keishi Hattori
no flags
Patch (4.76 KB, patch)
2012-10-30 02:51 PDT, Keishi Hattori
no flags
Patch (4.71 KB, patch)
2012-10-30 04:41 PDT, Keishi Hattori
no flags
Patch (4.84 KB, patch)
2012-10-30 19:32 PDT, Keishi Hattori
no flags
Keishi Hattori
Comment 1 2012-10-30 00:49:33 PDT
Kent Tamura
Comment 2 2012-10-30 02:03:17 PDT
Comment on attachment 171385 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=171385&action=review > Source/WebCore/ChangeLog:12 > + Test: platform/chromium/fast/forms/time/time-open-picker-key-bindings.html > + > + * html/BaseMultipleFieldsDateAndTimeInputType.cpp: Because this behavior is defined in BaseMultipleFIeldsDateAndTimeInputType, the test should be in fast/forms/time-multiple-fields/, not platform/chromium/fast/forms/time/.
Kent Tamura
Comment 3 2012-10-30 02:04:35 PDT
Comment on attachment 171385 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=171385&action=review > LayoutTests/platform/chromium/fast/forms/time/time-open-picker-key-bindings.html:19 > +var input = document.getElementById('time'); > +sendKey(input, "F4", false, false); > +shouldBeNull('document.getElementById("mock-page-popup")'); > +sendKey(input, "Down", false, true); nit: single/double quote usage is inconsistent.
Keishi Hattori
Comment 4 2012-10-30 02:51:41 PDT
WebKit Review Bot
Comment 5 2012-10-30 04:03:56 PDT
Comment on attachment 171406 [details] Patch Attachment 171406 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/14551049 New failing tests: fast/forms/time-multiple-fields/time-open-picker-key-bindings.html
Keishi Hattori
Comment 6 2012-10-30 04:41:12 PDT
Kent Tamura
Comment 7 2012-10-30 06:04:31 PDT
Comment on attachment 171419 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=171419&action=review > Source/WebCore/ChangeLog:10 > + Test: fast/forms/time-multiple-fields/time-open-picker-key-bindings.html Please rename it to a name starting with time-multiple-fields-.
Keishi Hattori
Comment 8 2012-10-30 19:32:37 PDT
WebKit Review Bot
Comment 9 2012-10-30 22:49:49 PDT
Comment on attachment 171567 [details] Patch Clearing flags on attachment: 171567 Committed r132985: <http://trac.webkit.org/changeset/132985>
WebKit Review Bot
Comment 10 2012-10-30 22:49:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.