F4 inside <input type=time> should not open calendar picker https://bugs.webkit.org/show_bug.cgi?id=100730

Reviewed by Kent Tamura.

Source/WebCore:

We lacked the check to see if the picker indicator is visible.

Test: fast/forms/time-multiple-fields/time-multiple-fields-open-picker-key-bindings.html

* html/BaseMultipleFieldsDateAndTimeInputType.cpp:
(WebCore::BaseMultipleFieldsDateAndTimeInputType::handleKeydownEvent): Check if picker indicator is visible.

LayoutTests:

* fast/forms/time-multiple-fields/time-multiple-fields-open-picker-key-bindings-expected.txt: Added.
* fast/forms/time-multiple-fields/time-multiple-fields-open-picker-key-bindings.html: Added.


Canonical link: https://commits.webkit.org/118864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132985 268f45cc-cd09-0410-ab3c-d52691b4dbfc